myteo/test/analyze/type_check/traits/incorrect_type_trait_param_arity_error.exp
Error: Incorrect number of type parameters. Expected 1 type parameter but found 0.
test/analyze/type_check/traits/incorrect_type_trait_param_arity_error.myte:6:8-13
 6 | methods Type1 {}
   |         ^^^^^

Error: Incorrect number of type parameters. Expected 1 type parameter but found 2.
test/analyze/type_check/traits/incorrect_type_trait_param_arity_error.myte:7:8-13
 7 | methods Type1<T, U> {}
   |         ^^^^^